--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
   position: fixed;
   left: 0;
   height: 100vh;
+  margin: 0;
   width: 20vw;
 }
 
@@ -13,9 +14,9 @@
   width: 100%;
 }
 
-.logo-container img{
-    width: 128px;
-    height: 80px;
+.logo-container img {
+  width: 128px;
+  height: 80px;
 }
 
 .logo-container h2 {
@@ -23,8 +24,43 @@
 }
 
 .logo a {
-    color: white !important;
-    display: flex;
-    align-items: center;
-    margin: 0 0 0 15px;
+  color: white !important;
+  display: flex;
+  align-items: center;
+  margin: 0 0 0 15px;
+}
+
+.menu-control-container {
+  display: none !important;
+  position: absolute !important;
+  right: 10px !important;
+  top: 25px !important;
+  font-size: 1.2rem !important;
+  border: none !important;
+}
+
+@media screen and (max-width: 1200px) {
+  .nav-container {
+    width: 23%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-container {
+    width: 26%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .nav-container {
+    height: 8vh;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+  }
+
+  .menu-control-container {
+    display: block !important;
+    padding: 1rem;
+  }
 }
